[Qt] Remove dead style option code.
Created attachment 129664 [details] Patch
Comment on attachment 129664 [details] Patch Attachment 129664 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11751325 New failing tests: fast/workers/storage/use-same-database-in-page-and-workers.html
Committed r109346: <http://trac.webkit.org/changeset/109346>