[Qt] Remove dead style option code. https://bugs.webkit.org/show_bug.cgi?id=80017

Reviewed by Kenneth Rohde Christiansen.

QtStyleOptionWebComboBox provides functionality (bool multiple()) that
is not called from anywhere (and the base class does not have it as a
virtual function).

* Target.pri:
* platform/qt/QtStyleOptionWebComboBox.h: Removed.
* platform/qt/RenderThemeQStyle.cpp:
(WebCore::RenderThemeQStyle::paintMenuList):
(WebCore::RenderThemeQStyle::paintMenuListButton):

Canonical link: https://commits.webkit.org/97095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109346 268f45cc-cd09-0410-ab3c-d52691b4dbfc